--- a/style.css
+++ b/style.css
@@ -1,16 +1,39 @@
+body{
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+}
 nav{
     width: 100%;
-    height: 123px;
+    height: 100px;
     position: fixed;
     background-color: gainsboro;
 }
 nav a{
     text-decoration: none;
+    float: left;
+    display: block;
+    color: #25242E;
+    text-align: center;
+    font-size: 13px;
+    line-height: 20px;
+}
+#nav-logo{
+    margin: 27px 20px 27px 80px;
+}
+#nav-logo img{
+    height: 41px;
 }
 .nav-text{
     background-color: aqua;
+    font-weight: 400;
+    margin: 40px 25px;
 }
 #login{
     background-color: #11296B;
     float: right;
+    color: #fff;
+    margin: 30px 80px 30px 50px;
+    padding: 10px 24px;
+    font-weight: 500;
+    border-radius: 30px;
 }
