--- a/reset.css
+++ b/reset.css
@@ -1,5 +1,5 @@
 /*
-	HTML5 Reset :: style.cs
+	HTML5 Reset :: style.css
 	----------------------------------------------------------
 	We have learned much from/been inspired by/taken code where offered from:
 
