--- a/style.css
+++ b/style.css
@@ -3,9 +3,11 @@ body{
     font-style: normal;
 }
 nav{
+    top: 0;
     width: 100%;
     height: 100px;
     position: fixed;
+    overflow: hidden;
     background-color: gainsboro;
 }
 nav a{
@@ -36,4 +38,7 @@ nav a{
     padding: 10px 24px;
     font-weight: 500;
     border-radius: 30px;
+}
+.part-1{
+    margin-top: 100px;
 }
