--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
 nav{
     top: 0;
     width: 100%;
-    height: 100px;
+    height: 123px;
     position: fixed;
     overflow: hidden;
     background-color: gainsboro;
@@ -20,23 +20,25 @@ nav a{
     line-height: 20px;
 }
 #nav-logo{
-    margin: 27px 20px 27px 80px;
+    margin: 33px 20px 33px 100px;
 }
 #nav-logo img{
-    height: 41px;
+    height: 51px;
 }
 .nav-text{
     background-color: aqua;
     font-weight: 400;
-    margin: 40px 25px;
+    font-size: 19px;
+    margin: 52px 25px;
 }
 #login{
     background-color: #11296B;
     float: right;
     color: #fff;
-    margin: 30px 80px 30px 50px;
-    padding: 10px 24px;
+    margin: 30px 100px 30px 50px;
+    padding: 16px 32px;
     font-weight: 500;
+    font-size: 19px;
     border-radius: 30px;
 }
 .flex-container{
@@ -44,7 +46,7 @@ nav a{
     flex-wrap: wrap;
 }
 #part-1{
-    margin-top: 200px;
+    margin-top: 250px;
 }
 .left{
     flex: 50%;
@@ -54,8 +56,8 @@ nav a{
 .left h1{
     font-weight: 500;
     margin: 30px 0px 0px 100px;
-    font-size: 45px;
-    line-height: 60px;
+    font-size: 52px;
+    line-height: 66px;
 }
 .left h1 span{
     /* background-color: #FFDB57; */
@@ -64,8 +66,8 @@ nav a{
 .left p{
     font-weight: 400;
     margin: 20px 0px 40px 100px;
-    font-size: 13px;
-    line-height: 20px;
+    font-size: 16px;
+    line-height: 22px;
 }
 .left a{
     background-color: #11296B;
@@ -73,9 +75,9 @@ nav a{
     text-decoration: none;
     font-weight: 500;
     margin-left: 100px;
-    font-size: 16px;
-    line-height: 20px;
-    padding: 10px 30px;
+    font-size: 18px;
+    line-height: 2px;
+    padding: 14px 30px;
     border-radius: 30px;
 }
 .right{
@@ -83,24 +85,84 @@ nav a{
     background-color: blueviolet;
 }
 #part-2{
-    margin-top: 200px;
+    margin: 200px auto;
+    width: 88%;
 }
 #part-2 h2{
     text-align: center;
     font-weight: 500;
-    font-size: 21px;
-    line-height: 34px;
+    font-size: 28px;
+    line-height: 42px;
 }
 .box-container{
     background-color: cyan;
     border-radius: 24px;
+    width: 340px;
+    margin: 15px auto;
 }
 .box-container img{
-    width: 80%;
+    width: 90%;
     display: block;
-    margin: 10px auto;
+    margin: 18px auto 25px;
 }
-
+.box-text-container{
+    width: 90%;
+    display: flex;
+    margin: 0px auto;
+}
+.materials-text-1{
+    width: 70%;
+    background-color: burlywood;
+}
+.course-text{
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 30px;
+    margin: 6px 0px 2px;
+}
+.price-text{
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 21px;
+}
+.materials-text-2{
+    background-color: blue;
+    flex-grow: 1;
+}
+.materials-text-2-box{
+    background-color: #FFDB57;
+    border-radius: 30px;
+    float: right;
+    padding: 0px 8px;
+    margin: 8px 0px;
+}
+.materials-text-2-box img{
+    width: 8px;
+    display: inline-block;
+    margin: 0px;
+}
+.materials-text-2-box p{
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 18px;
+    display: inline-block;
+}
+.get-course-text{
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 30px;
+    color: #11296B;
+    background-color: chocolate;
+    text-decoration: none;
+    border: 1px solid #11296B;
+    border-radius: 12px;
+    text-align: center;
+    display: block;
+    width: 90%;
+    margin: 25px auto 18px;
+    padding: 10px 0px;
+}
+#part-3
 footer{
     margin-top: 3000px;
 }
