--- a/style.css
+++ b/style.css
@@ -88,14 +88,16 @@ nav a{
     margin: 200px auto;
     width: 88%;
 }
-#part-2 h2{
+.part{
     text-align: center;
     font-weight: 500;
     font-size: 28px;
     line-height: 42px;
+    margin-bottom: 80px;
 }
 .box-container{
     background-color: cyan;
+    border: 1px solid #11296B;
     border-radius: 24px;
     width: 340px;
     margin: 15px auto;
@@ -162,7 +164,25 @@ nav a{
     margin: 25px auto 18px;
     padding: 10px 0px;
 }
-#part-3
+#expand-course{
+    background-color: bisque;
+    text-align: center;
+    width: 210px;
+    margin: 80px auto;
+    padding: 14px;
+    border: 1px solid #11296B;;
+    border-radius: 30px;
+    
+}
+#expand-course a{
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 22px;
+    line-height: 30px;
+}
+#part-3{
+    margin: 200px auto;
+}
 footer{
-    margin-top: 3000px;
+    margin-top: 9000px;
 }
