--- a/style.css
+++ b/style.css
@@ -46,16 +46,17 @@ nav a{
     flex-wrap: wrap;
 }
 #part-1{
-    margin-top: 250px;
+    margin: 250px auto 200px;
+    width: 88%;
+
 }
 .left{
     flex: 50%;
     background-color: cornflowerblue;
-    /* padding: 100px; */
 }
 .left h1{
     font-weight: 500;
-    margin: 30px 0px 0px 100px;
+    margin: 30px 0 0 ;
     font-size: 52px;
     line-height: 66px;
 }
@@ -65,7 +66,7 @@ nav a{
 }
 .left p{
     font-weight: 400;
-    margin: 20px 0px 40px 100px;
+    margin: 20px 0 40px;
     font-size: 16px;
     line-height: 22px;
 }
@@ -74,7 +75,6 @@ nav a{
     color: #fff;
     text-decoration: none;
     font-weight: 500;
-    margin-left: 100px;
     font-size: 18px;
     line-height: 2px;
     padding: 14px 30px;
@@ -87,6 +87,7 @@ nav a{
 #part-2{
     margin: 200px auto;
     width: 88%;
+    background-color: darkcyan;
 }
 .part{
     text-align: center;
@@ -110,7 +111,7 @@ nav a{
 .box-text-container{
     width: 90%;
     display: flex;
-    margin: 0px auto;
+    margin: 0 auto;
 }
 .materials-text-1{
     width: 70%;
@@ -120,7 +121,7 @@ nav a{
     font-weight: 500;
     font-size: 20px;
     line-height: 30px;
-    margin: 6px 0px 2px;
+    margin: 6px 0 2px;
 }
 .price-text{
     font-weight: 400;
@@ -135,13 +136,13 @@ nav a{
     background-color: #FFDB57;
     border-radius: 30px;
     float: right;
-    padding: 0px 8px;
-    margin: 8px 0px;
+    padding: 0 8px;
+    margin: 8px 0;
 }
 .materials-text-2-box img{
     width: 8px;
     display: inline-block;
-    margin: 0px;
+    margin: 0;
 }
 .materials-text-2-box p{
     font-weight: 500;
@@ -162,7 +163,7 @@ nav a{
     display: block;
     width: 90%;
     margin: 25px auto 18px;
-    padding: 10px 0px;
+    padding: 10px 0;
 }
 #expand-course{
     background-color: bisque;
@@ -182,7 +183,15 @@ nav a{
 }
 #part-3{
     margin: 200px auto;
+    width: 88%;
+    background-color: deeppink;
 }
+#part-4{
+    margin: 200px auto;
+    width: 88%;
+    background-color: darkmagenta;
+}
+
 footer{
     margin-top: 9000px;
 }
