--- a/style.css
+++ b/style.css
@@ -5,10 +5,11 @@ body{
 nav{
     top: 0;
     width: 100%;
-    height: 123px;
+    height: 101px;
     position: fixed;
     overflow: hidden;
-    background-color: gainsboro;
+    background-color: #fff;
+    box-shadow: 0px 1px 10px #999;
 }
 nav a{
     text-decoration: none;
@@ -16,49 +17,44 @@ nav a{
     display: block;
     color: #25242E;
     text-align: center;
-    font-size: 13px;
-    line-height: 20px;
+    font-size: 15px;
 }
 #nav-logo{
-    margin: 33px 20px 33px 100px;
+    margin: 27px 20px 27px 80px;
 }
 #nav-logo img{
-    height: 51px;
+    height: 41px;
 }
 .nav-text{
-    background-color: aqua;
     font-weight: 400;
-    font-size: 19px;
-    margin: 52px 25px;
+    margin: 39px 25px;
 }
 #login{
     background-color: #11296B;
     float: right;
     color: #fff;
-    margin: 30px 100px 30px 50px;
-    padding: 16px 32px;
+    margin: 31px 80px 31px 0;
+    padding: 8px 20px;
     font-weight: 500;
-    font-size: 19px;
     border-radius: 30px;
 }
 .flex-container{
     display: flex;
     flex-wrap: wrap;
 }
-#part-1{
-    margin: 250px auto 200px;
-    width: 88%;
 
+#part-1{
+    margin: 200px auto 150px;
+    width: 88%;
 }
 .left{
     flex: 50%;
-    background-color: cornflowerblue;
 }
 .left h1{
     font-weight: 500;
     margin: 30px 0 0 ;
-    font-size: 52px;
-    line-height: 66px;
+    font-size: 46px;
+    line-height: 60px;
 }
 .left h1 span{
     /* background-color: #FFDB57; */
@@ -67,46 +63,43 @@ nav a{
 .left p{
     font-weight: 400;
     margin: 20px 0 40px;
-    font-size: 16px;
-    line-height: 22px;
+    font-size: 14px;
+    line-height: 20px;
 }
 .left a{
     background-color: #11296B;
     color: #fff;
     text-decoration: none;
     font-weight: 500;
-    font-size: 18px;
-    line-height: 2px;
-    padding: 14px 30px;
+    font-size: 16px;
+    padding: 12px 28px;
     border-radius: 30px;
 }
 .right{
     flex: 50%;
-    background-color: blueviolet;
 }
+
 #part-2{
-    margin: 200px auto;
+    margin: 150px auto;
     width: 88%;
-    background-color: darkcyan;
 }
 .part{
     text-align: center;
     font-weight: 500;
     font-size: 28px;
     line-height: 42px;
-    margin-bottom: 80px;
+    margin-bottom: 50px;
 }
 .box-container{
-    background-color: cyan;
     border: 1px solid #11296B;
     border-radius: 24px;
-    width: 340px;
-    margin: 15px auto;
+    width: 280px;
+    margin: 8px auto;
 }
 .box-container img{
     width: 90%;
     display: block;
-    margin: 18px auto 25px;
+    margin: 14px auto 20px;
 }
 .box-text-container{
     width: 90%;
@@ -114,22 +107,20 @@ nav a{
     margin: 0 auto;
 }
 .materials-text-1{
-    width: 70%;
-    background-color: burlywood;
+    width: 65%;
 }
 .course-text{
     font-weight: 500;
-    font-size: 20px;
-    line-height: 30px;
+    font-size: 17px;
+    line-height: 20px;
     margin: 6px 0 2px;
 }
 .price-text{
     font-weight: 400;
-    font-size: 14px;
-    line-height: 21px;
+    font-size: 13px;
+    line-height: 18px;
 }
 .materials-text-2{
-    background-color: blue;
     flex-grow: 1;
 }
 .materials-text-2-box{
@@ -137,61 +128,178 @@ nav a{
     border-radius: 30px;
     float: right;
     padding: 0 8px;
-    margin: 8px 0;
+    margin: 3px 0;
 }
 .materials-text-2-box img{
-    width: 8px;
+    width: 7px;
     display: inline-block;
     margin: 0;
 }
 .materials-text-2-box p{
     font-weight: 500;
-    font-size: 12px;
-    line-height: 18px;
+    font-size: 11px;
+    line-height: 17px;
     display: inline-block;
 }
 .get-course-text{
     font-weight: 500;
-    font-size: 20px;
-    line-height: 30px;
+    font-size: 17px;
+    line-height: 20px;
     color: #11296B;
-    background-color: chocolate;
     text-decoration: none;
     border: 1px solid #11296B;
     border-radius: 12px;
     text-align: center;
     display: block;
     width: 90%;
-    margin: 25px auto 18px;
-    padding: 10px 0;
+    margin: 10px auto 14px;
+    padding: 8px 0;
 }
 #expand-course{
-    background-color: bisque;
     text-align: center;
-    width: 210px;
-    margin: 80px auto;
-    padding: 14px;
-    border: 1px solid #11296B;;
+    width: 190px;
+    margin: 50px auto;
+    padding: 12px;
+    border: 1px solid #11296B;
     border-radius: 30px;
-    
 }
 #expand-course a{
     text-decoration: none;
     font-weight: 500;
-    font-size: 22px;
-    line-height: 30px;
+    font-size: 20px;
+    line-height: 26px;
 }
+
 #part-3{
     margin: 200px auto;
     width: 88%;
-    background-color: deeppink;
 }
-#part-4{
-    margin: 200px auto;
-    width: 88%;
-    background-color: darkmagenta;
+.container-left{
+    flex: 33%;
+}
+.container-mid{
+    flex: 34%;
+}
+.container-right{
+    flex: 33%;
+}
+.box-container-lr{
+    width: 80%;
+    margin: 60px 0;
+}
+.text-1{
+    padding-bottom: 40px;
+}
+.text-1 p{
+    font-weight: 500;
+    font-size: 21px;
+    line-height: 26px;
+    float: left;
+}
+.text-1 img{
+    float: left;
+    width: 25px;
+    margin-left: 8px;
+}
+.text-2{
+    display: inline-block;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+}
+.container-mid p{
+    text-align: center;
+}
+.container-mid p img{
+    width: 90%;
+    border-radius: 200px;
+    border: 1px solid #11296B;
+}
+#box-container-1-part-3{
+    margin-left: 60px;
+}
+#box-container-2-part-3{
+    margin-left: 60px;
+}
+#box-container-3-part-3{
+    margin-left: 18px;
+}
+#box-container-4-part-3{
+    margin-left: 78px;
+}
+#box-container-5-part-3{
+    margin-left: 18px;
+}
+.box-container-end{
+    /* width: 80%; */
+    margin: 60px 0;
+}
+.box-explained-total{
+    background-color: #AEDAFF;
+    display: inline-block;
+    padding: 10px 40px;
+    margin: 0 8px;
+    border-radius: 18px;
+}
+.total-1{
+    font-weight: 500;
+    font-size: 35px;
+    line-height: 55px;
+}
+.total-2{
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
 }
 
 footer{
-    margin-top: 9000px;
+    margin-top: 150px;
+}
+#flow{
+    background-color: #11296B;
+    text-align: center;
+    width: 190px;
+    margin: 50px auto;
+    padding: 12px;
+    border: 1px solid #11296B;
+    border-radius: 30px;
+}
+#flow a{
+    color: #fff;
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 26px;
+}
+.table{
+    display: table;
+    width: 80%;
+    margin-left: 100px;
+}
+.table-row{
+    display: table-row;
+}
+.table-cell{
+    display: table-cell;
+    padding: 5px;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 20px;
+    color: #686870;
+}
+.left .foot-left{
+    margin-left: 80px;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 20px;
+    color: #686870;
+}
+.head{
+    font-weight: 500;
+    font-size: 13px;
+    line-height: 20px;
+    color: #25242E;
+}
+#copyright{
+    margin-top: 100px;
 }
